--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ snap.forEach(d => {
     if (mode === 'day' && date.toDateString() === now.toDateString()) res.push(data);
     else if (mode === 'month' && date.getMonth() === now.getMonth() && date.getFullYear() === now.getFullYear()) res.push(data);
     else if (mode === 'dow') res.push(data);
+    else if (mode === 'dates') res.push(data);
 });
 return res.sort((a,b) => b.timestamp - a.timestamp);
 };
@@ -187,7 +188,7 @@ window.cloudDelete = async (tableId) => { await deleteDoc(doc(db, "tables", tabl
 
 <div id="view-admin" class="view">
 <header><div class="header-left"><span class="back-btn" onclick="showIndex()">＜</span><span>売上管理</span></div><div style="font-size:12px; color:var(--danger);" onclick="logoutOwner()">終了</div></header>
-<div class="admin-nav"><div id="nav-day" class="admin-nav-btn active" onclick="showAdmin('day')">本日</div><div id="nav-dow" class="admin-nav-btn" onclick="showAdmin('dow')">曜日別</div><div id="nav-month" class="admin-nav-btn" onclick="showAdmin('month')">月別</div></div>
+<div class="admin-nav"><div id="nav-day" class="admin-nav-btn active" onclick="showAdmin('day')">本日</div><div id="nav-dates" class="admin-nav-btn" onclick="showAdmin('dates')">日別</div><div id="nav-dow" class="admin-nav-btn" onclick="showAdmin('dow')">曜日別</div><div id="nav-month" class="admin-nav-btn" onclick="showAdmin('month')">月別</div></div>
 <div id="admin-summary-area" style="padding:15px; background:var(--dark); color:#fff; display:flex; justify-content:space-around; text-align:center; font-size:13px;"><div>件数<br><span id="sum-count" style="font-size:20px; font-weight:bold;">0</span></div><div>客数<br><span id="sum-guests" style="font-size:20px; font-weight:bold;">0</span></div><div>合計<br>¥<span id="sum-total" style="font-size:20px; font-weight:bold;">0</span></div></div>
 <div class="report-btns"><button class="btn-report" onclick="printReport('day')">日計印刷</button><button class="btn-report" onclick="printReport('month')" style="background:var(--accent);">月計印刷</button></div>
 <div class="list-container" id="sales-list" style="background:#f4f4f4; padding:5px 0;"></div>
@@ -449,7 +450,7 @@ function onTableClick(tId) { currentTable = tId; if(localStorage.getItem('histor
 async function showAdmin(mode) {
     hideAll(); document.getElementById('view-admin').style.display = 'flex';
     document.querySelectorAll('.admin-nav-btn').forEach(b => b.classList.remove('active'));
-    const navId = mode==='month'?'month':mode==='dow'?'dow':'day';
+    const navId = mode==='month'?'month':mode==='dow'?'dow':mode==='dates'?'dates':'day';
     const navEl = document.getElementById('nav-' + navId);
     if(navEl) navEl.classList.add('active');
     const list = document.getElementById('sales-list'); list.innerHTML = '<p style="text-align:center; padding:50px;">集計中...</p>';
@@ -461,6 +462,19 @@ async function showAdmin(mode) {
                 total += s.total; guests += s.guests;
                 return `<div class="sale-card"><div class="sale-time-row"><span class="sale-time">${s.checkout}</span><span class="sale-table-badge">${s.tableId}番</span></div><div class="sale-detail-info">客: ${s.guests}名 / 入店: ${s.checkin}</div><div class="sale-total-line"><span class="sale-price-big">¥${s.total.toLocaleString()}</span><button class="btn-del-sale" onclick="deleteSaleDoc('${s.id}')">削除</button></div></div>`;
             }).join('') || '<p style="text-align:center; padding:50px;">本日データなし</p>';
+        } else if (mode === 'dates') {
+            // 日別グループ集計
+            const dayMap = {};
+            sales.forEach(s => {
+                const d = s.timestamp.toDate();
+                const key = `${d.getFullYear()}/${String(d.getMonth()+1).padStart(2,'0')}/${String(d.getDate()).padStart(2,'0')}`;
+                const dow = ['日','月','火','水','木','金','土'][d.getDay()];
+                if(!dayMap[key]) dayMap[key] = { label: `${key}（${dow}）`, t: 0, c: 0, g: 0, ts: d.getTime() };
+                dayMap[key].t += s.total; dayMap[key].c++; dayMap[key].g += s.guests;
+                total += s.total; guests += s.guests;
+            });
+            const sorted = Object.values(dayMap).sort((a,b) => b.ts - a.ts);
+            list.innerHTML = sorted.map(s => `<div class="sale-card"><div class="sale-time-row"><span class="sale-time" style="font-size:15px;">${s.label}</span></div><div class="sale-detail-info">件数: ${s.c} / 客数: ${s.g}名</div><div class="sale-total-line"><span class="sale-price-big">¥${s.t.toLocaleString()}</span></div></div>`).join('') || '<p style="text-align:center; padding:50px;">データなし</p>';
         } else if (mode === 'dow') {
             const labels = ['日','月','火','水','木','金','土'];
             let stats = [0,1,2,3,4,5,6].map(i=>({l:labels[i], t:0, c:0, g:0}));
